--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="header header_wrap">
             <img src="./Bill.png" alt="Bill Preston" class="photo_bill">
                 <div class="header_p">
-                    <h1>Bill Preston</h1>
-                    <p>Frontend Developer</p>
+                    <h1>Who? Bill Preston</h1>
+                    <p>Frontend Developer...</p>
                 </div>
         </div>
     </header>    
