--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="objective_p-1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quis fugit recusandae suscipit reprehenderit quod nemo cumque labore obcaecati, id vel earum fugiat quo sunt molestiae minima. Harum eveniet voluptates perferendis assumenda cupiditate, adipisci quisquam quis eum libero veritatis nostrum ipsam officiis eos expedita enim obcaecati, labore voluptatibus sapiente excepturi impedit ipsum similique a voluptas dolorem qui!</p>
         </div>
-        <div class="objective_p-2">
+        <div class="objective_p-2">gg
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus minima sit perferendis rem quis quam quia. Mollitia quidem, incidunt dolorum nesciunt eius numquam dolore asperiores facere ipsum inventore delectus repellendus id, amet eos voluptatibus ipsam reiciendis corporis. Assumenda ullam debitis eligendi inventore sequi error ipsum necessitatibus, impedit beatae est veritatis, deleniti perferendis mollitia eveniet. Officiis pariatur voluptatum sapiente. Laboriosam consequatur fugiat hic sed libero? Assumenda dolores voluptates perspiciatis ullam aut sunt itaque expedita, vero repudiandae nesciunt qui a dolore eius consequatur molestias modi quasi eum tenetur saepe imilique ea rem ipsa asperiores hic sequi quia neque tempora magni repellat quasi saepe molestiae earum vero provident, consequuntur quis quaerat voluptatum repudiandae iusto officiis minus mollitia! Officia exercitationem ullam porro. Quisquam debitis expedita aspernatur beatae quas nobis accusamus illum, labore illo ut, nesciunt, doloremque provident aliquid.</p>
         </div>
         </section>
